--- a/RemindAlarm/app/src/main/res/values/strings.xml
+++ b/RemindAlarm/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="ringtone">벨소리</string>
     <string name="save">Save</string>
     <string name="dismiss">Dismiss</string>
+    <string name="hint_input_reminder_name">Please enter a name</string>
+    <string name="ringtone_en">Ringtone</string>
 </resources>
